caddy8070.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy
        image: caddy:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: caddy-data
          mountPath: /data
      volumes:
      - name: caddy-data
        persistentVolumeClaim:
          claimName: caddy-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
spec:
  type: LoadBalancer
  selector:
    app: caddy
  ports:
    - port: 8070
      targetPort: 80
      protocol: TCP
