minimal_next_chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextchat
  template:
    metadata:
      labels:
        app: nextchat
    spec:
      containers:
      - name: nextchat
        image: aanilkay/minimalnextollamachat:0.1.2_static_amd64
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nextchat
spec:
  selector:
    app: nextchat
  ports:
  - port: 3000
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextchat-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: nextchat.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextchat
            port:
              number: 3000
