pod_info_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: podinfo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-release-podinfo
                port:
                  number: 9898
